<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@color/colorWhite">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:textColor="@color/colorBlack"
        android:text="@string/post_delete_dialog_1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_sans_cjkkr_medium"
            android:textStyle="normal"
            android:textSize="14sp"
            android:textColor="#6200ee"
            android:letterSpacing="0.11"
            android:lineSpacingExtra="10sp"
            android:padding="12dp"
            tools:text="@string/back"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_sans_cjkkr_medium"
            android:textStyle="normal"
            android:textSize="14sp"
            android:textColor="#6200ee"
            android:letterSpacing="0.11"
            android:lineSpacingExtra="10sp"
            android:padding="12dp"
            tools:text="@string/delete"
            />

    </LinearLayout>

</LinearLayout>