<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnBack"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/icon_back_24" />

        <TextView
            android:id="@+id/hot_posts_tap_name"
            style="@style/PageName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="194dp"
            android:layout_marginRight="194dp"
            android:layout_marginBottom="17dp"
            android:includeFontPadding="false"
            android:textColor="@color/colorBlack"
            android:text="@string/new_post" />

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <TextView
            style="@style/DrawerName"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:gravity="center"
            android:text="@string/complete"
            android:textColor="@color/colorMain"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="410dp"
                android:src="@drawable/food_image" />

            <TextView
                style="@style/InvalidName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="14dp"
                android:hint="@string/new_post_title_hint"
                android:scrollbars="vertical"
                android:includeFontPadding="false"
                android:textColorHint="@color/colorBlack"
                android:textColor="@color/colorBlack" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorLightGray" />

            <TextView
                style="@style/InvalidName"
                android:layout_width="match_parent"
                android:layout_height="187dp"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="14dp"
                android:hint="@string/new_post_content_hint"
                android:includeFontPadding="false"
                android:textColorHint="@color/colorBlack"
                android:textColor="@color/colorBlack"/>

            <Button
                android:layout_width="280dp"
                android:layout_height="50dp"
                android:background="@drawable/btn_round_next"
                android:layout_gravity="center"/>
        </LinearLayout>

    </ScrollView>

</LinearLayout>